1st publish commit

--- a/src/app/profile/about/about.component.html
+++ b/src/app/profile/about/about.component.html
@@ -4,7 +4,7 @@
         <div class="row">
           <div class="col-lg-12 col-md-12">
             <div class="card-body">
-              <div class="h4 mt-0 title">About</div>
+              <div class="h4 mt-0 title" align="center">About</div>
               <p>Hello World! I'm <strong>Amit</strong>, a Computer Science graduate passionate about technology and exploring the intersection between Software Application development, Web Development and Mobile app development. </p>
 
 
