--- a/src/app/profile/experience/experience.component.html
+++ b/src/app/profile/experience/experience.component.html
@@ -15,7 +15,7 @@
 
                        <div class="timeline-label">
                         <h2>Access and Identity Management Analyst - Intern <span>May 2018, June 2019</span></h2>
-                         <h4>BlackRock</h4>
+                         <h5>BlackRock</h5>
                           <ul>
                             <li>Managed user groups and provided priviliged system access to BlackRock members</li>                                           
                             <li>Used Oracle Service Manager (SM9) to resolve incident tickets</li>
@@ -37,7 +37,7 @@
                      </div>
                      <div class="timeline-label">
                       <h2>Student Assistant <span>August 2018 - December 2019</span></h2>
-                       <h4>The University of Texas at Arlington</h4>
+                       <h5>The University of Texas at Arlington</h5>
                         <ul>
                           <li>Managed move-in and move-out procedures for students living in the residence hall.</li>                              
                           <li>Organized Staff Development events every month </li>                                            
@@ -56,8 +56,8 @@
                         <i class="icon-pen2"></i>
                      </div>
                      <div class="timeline-label">
-                      <h2>Android Developer Intern <span>January 2017 - May 2017</span></h2>
-                       <h4>Neemii Technology Private Limited</h4>
+                      <h2>Android Developer - Intern <span>January 2017 - May 2017</span></h2>
+                       <h5>Neemii Technology Private Limited</h5>
                         <ul>
                           <li>Developed and Designed a Bus Tracking Application using Android Java and Android XML</li>                              
                           <li>Integarted Firebase notifications in the Bus Tracking Application </li>                                            
