--- a/src/app/profile/experience/experience.component.scss
+++ b/src/app/profile/experience/experience.component.scss
@@ -115,7 +115,7 @@
       
       .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 {
         font-size: 20px;
-        font-family: "Quicksand", Arial, sans-serif;
+        //font-family: "Quicksand", Arial, sans-serif;
         font-weight: 500; }
       
       .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 a {
@@ -131,17 +131,17 @@
       
       }
       
-      .timeline-label h4{
+      .timeline-label h5{
        
         margin-top: -15px;
-        font-family: "Quicksand", Arial, sans-serif;
-        color: #545755;font-weight:500;
+        //font-family: "Quicksand", Arial, sans-serif;
+        color: #000000;font-weight:500;
       
       
       }
       .timeline-label span{
       
-       color: #000;font-weight: 600;
+       color: #000;font-weight: bold; 
       }
       
       .timeline-label p{
@@ -149,5 +149,6 @@
         font-size: 1.3em;font-weight:500;
       }
       .timeline-label ul{
-        font-size: 1.3em;font-weight:500; font-family: "Quicksand", Arial, sans-serif;
+        font-size: 1.3em;font-weight:500; 
+        //font-family: "Quicksand", Arial, sans-serif;
       }
