--- a/src/app/profile/footer/footer.component.html
+++ b/src/app/profile/footer/footer.component.html
@@ -1,24 +1,17 @@
 <footer class="footer">
     <div class="container text-center">
-      <a class="cc-facebook btn btn-link" href="https://www.facebook.com/mehul.kothari.39" target="_blank">
-        <i class="fa fa-facebook fa-2x " aria-hidden="true"></i>
-      </a>
-      <a class="cc-instagram btn btn-link" href="https://www.instagram.com/mehul_kothari05/" target="_blank">
-        <i class="fa fa-instagram fa-2x " aria-hidden="true"></i>
-      </a>
-      <a class="cc-twitter btn btn-link " href="https://twitter.com/MehulKo18943279" target="_blank">
-        <i class="fa fa-twitter fa-2x " aria-hidden="true"></i>
+
+      <a class="cc-linkedin btn btn-link" href="https://www.linkedin.com/in/amitesh-mathur/" target="_blank">
+        <i class="fa fa-linkedin fa-2x " aria-hidden="true"></i>
       </a>
 
-      <a class="cc-github btn btn-link " href="https://github.com/mehulk05" target="_blank">
+      <a class="cc-github btn btn-link " href="https://github.com/amit63" target="_blank">
         <i class="fa fa-github fa-2x " aria-hidden="true"></i>
       </a>
-      <!-- <a class="cc-google-plus btn btn-link" href="#" target="_blank">
-        <i class="fa fa-google-plus fa-2x" aria-hidden="true"></i>
-      </a> -->
+
     </div>
     <div class="text-center text-muted">
-      <p>&copy; All rights reserved.
+      <p>&copy; 2020 Amitesh Mathur. All rights reserved. | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
       </p>
     </div>
   </footer>
