--- a/src/app/profile/intro/intro.component.html
+++ b/src/app/profile/intro/intro.component.html
@@ -1,6 +1,6 @@
 <div class="profile-page">
     <div class="wrapper">
-      <div class="page-header page-header-small" filter-color="green">
+      <div class="page-header page-header-small" filter-color="blue">
         <div class="page-header-image" data-parallax="true" style="background-image: url('assets/images/intro.jpg');">
         </div>
         <div class="container">
@@ -12,8 +12,7 @@
             </div>
             <div class="h2 title">Amitesh Mathur</div>
             <p class="category text-white">Full Stack Developer, Software Developer</p>
-            <!-- <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
-              data-aos-anchor="data-aos-anchor">Reach Me</a> -->
+
             <a class="btn btn-primary"
               href="https://resume.creddle.io/resume/gknas8pp1qd" target="_blank"
               data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Resume</a>
@@ -38,14 +37,7 @@
                 target="_blank" rel="tooltip" title="Follow me on Github">
                 <i class="fa fa-github"></i>
               </a>
-              <!-- <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/MehulKo18943279"
-                target="_blank" rel="tooltip" title="Follow me on Twitter">
-                <i class="fa fa-twitter"></i>
-              </a> -->
-              <!-- <a class="btn btn-default btn-round btn-lg btn-icon" href="#" target="_blank" rel="tooltip"
-                title="Follow me on Google+">
-                <i class="fa fa-google-plus"></i>
-              </a> -->
+
             </div>
           </div>
         </div>
