--- a/src/app/profile/projects/projects.component.html
+++ b/src/app/profile/projects/projects.component.html
@@ -8,10 +8,10 @@
        <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
         <div class="blog-entry">
       <div class="card" >
-        <img class="card-img-top" src="assets/images/website.JPG" alt="Card image" style="width:100%">
+        <img class="card-img-top" src="assets/images/w2.jpg" alt="Card image"  style="width:100%">
         <div class="card-body">
           <h4 class="card-title">Personal Portfolio</h4>
-          <h5 class="card-text">Designed and developed my own portfolio using HTML5, CSS3, Angular8 and Bootstrap3 </h5>
+          <h5 class="card-text">Designed and developed my own portfolio website using HTML5, CSS3, Angular8 and Bootstrap3 </h5>
            
           <a href="https://github.com/amit63/Portfolio" class="btn btn-primary stretched-link">Github Repository</a>
         
@@ -23,15 +23,14 @@
     <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
         <div class="blog-entry">
        <div class="card" >
-        <img class="card-img-top"src="assets/images/p2.png" alt="Card image" style="width:100%">
+        <img class="card-img-top"src="assets/images/workorder.jpg" alt="Card image" style="width:100%">
         <div class="card-body">
-          <h4 class="card-title">Personal Portfolio Using Django</h4>
-           <h5 class="card-text"><b>Technology :</b> Django,Python,Bootstrap3 </h5>
+          <h4 class="card-title">Work Order System</h4>
+           <h5 class="card-text">Designed, developed and tested an application for managing work orders using Java,JSP & Selenium</h5>
     
-            <h5 class="card-text"><a href="http://msgc320.pythonanywhere.com/">View my Live Demo</a></h5>
-    
-        <a href="https://medium.com/@mehulkothari05/personal-portfolio-using-django-dba49c355905" class="btn btn-primary  stretched-link ml-2 mr-5 ">See Project</a>
-          <a href="https://github.com/mehulk05/My-Personal-Portfolio" class="btn btn-primary stretched-link">GithubLink</a>
+            
+        
+          <a href="https://github.com/amit63/WorkOrderManagementSystem" class="btn btn-primary stretched-link">Github Repository</a>
         </div>
     </div>
     </div>
@@ -40,10 +39,10 @@
       <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
         <div class="blog-entry">
       <div class="card" >
-        <img class="card-img-top" src="assets/images/petstore.JPG" alt="Card image" style="width:100%">
+        <img class="card-img-top" src="assets/images/petstore.jpg" alt="Card image" style="width:100%">
         <div class="card-body">
           <h4 class="card-title">Pet Store </h4>
-          <h5 class="card-text">Designed and developed a website for a Pet Store with Database Connectivity using PHP CodeIgniter framework</h5>             
+          <h5 class="card-text">Designed and developed a website for a Pet Store using PHP CodeIgniter framework</h5>             
          <a href="https://github.com/amit63/PetStore" class="btn btn-primary stretched-link">Github Repository</a>
         </div>
       </div>
@@ -54,13 +53,12 @@
       <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
         <div class="blog-entry">
        <div class="card" >
-        <img class="card-img-top" src="assets/images/p3.png" alt="Card image" style="width:100%">
+        <img class="card-img-top" src="assets/images/Leanjobs.jpg" alt="Card image" style="width:100%">
         <div class="card-body">
-         <h4 class="card-title">Movie Success Prediction(Hackathon)</h4>
-           <h5 class="card-text"><b>Technology :</b> Django,Python,ML,DataScience </h5>
-           <h5 class="card-text"><a href="https://medium.com/@mehulkothari05/movie-success-prediction-a67d871a7b1"> Read Blog on this  Project</a></h5>
-        <a href="https://medium.com/@mehulkothari05/movie-success-prediction-a67d871a7b1" class="btn btn-primary stretched-link ml-2 mr-5">See Project</a>
-          <a href="https://github.com/mehulk05?tab=repositories" class="btn btn-primary stretched-link">GithubLink</a>
+         <h4 class="card-title">Lean Jobs App</h4>
+           <h5 class="card-text">Designed and developed an Job portal Application using Android Java, Android XML, MySQL and PHP.</h5>
+           
+          <a href="https://github.com/amit63/leanjobs" class="btn btn-primary stretched-link">Github Repository</a>
         </div>
     </div>
     </div>
@@ -70,13 +68,12 @@
     <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
         <div class="blog-entry">
        <div class="card" >
-        <img class="card-img-top" src="assets/images/p5.png" alt="Card image" style="width:100%">
+        <img class="card-img-top" src="assets/images/cs.jpg" alt="Card image" style="width:100%">
         <div class="card-body">
-          <h4 class="card-title">Smart Baby Stroller(Final Year)</h4>
-           <h5 class="card-text"><b>Technology :</b> Python,Android,Firebase </h5>
-             <h5 class="card-text"><a href="https://medium.com/@mehulkothari05/smart-baby-stroller-system-3f6b4f49476a"> Read Blog on this  Project</a></h5>
-          <a href="https://medium.com/@mehulkothari05/smart-baby-stroller-system-3f6b4f49476a" class="btn btn-primary stretched-link ml-2 mr-5">See Project</a>
-          <a href="https://github.com/mehulk05/Smart-Baby-Stroller-System.git" class="btn btn-primary stretched-link">GithubLink</a>
+          <h4 class="card-title">Distributed System Projects</h4>
+           <h5 class="card-text">Developed a simple multithreaded client server application using Java Swing and socket programming</h5>
+             
+          <a href="https://github.com/amit63/ClientServerInteractor" class="btn btn-primary stretched-link">Github Repository</a>
         </div>
         </div>
         </div>
@@ -85,49 +82,15 @@
       <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
         <div class="blog-entry">
            <div class="card" >
-        <img class="card-img-top" src="assets/images/p6.png" alt="Card image" style="width:100%">
+        <img class="card-img-top" src="assets/images/bustrack.jpg" alt="Card image" style="width:100%">
         <div class="card-body">
-         <h4 class="card-title">Simple Chat Application Using Firebase</h4>
-           <h5 class="card-text"><b>Technology :</b> Android,Java,Firebase </h5>
-             <h5 class="card-text"><a href="https://code.tutsplus.com/tutorials/how-to-create-an-android-chat-app-using-firebase--cms-27397"> Read Blog on this  Project</a></h5>
-          <a href="https://github.com/mehulk05?tab=repositories" class="btn btn-primary stretched-link ml-2 mr-5">See Project</a>
-          <a href="https://github.com/mehulk05?tab=repositories" class="btn btn-primary stretched-link">GithubLink</a>
+         <h4 class="card-title">Bus Tracking App</h4>
+           <h5 class="card-text">Developed a Bus Tracking Application using Android Java, Android XML and Firebase notifications</h5>
+            <a href="https://github.com/amit63/leanjobs" class="btn btn-primary stretched-link">Github Repository</a>
         </div>
         </div>
         </div>
         </div>
-    
-    
-     <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
-        <div class="blog-entry">
-      <div class="card" >
-        <img class="card-img-top" src="assets/images/p8.png" alt="Card image" style="width:100%">
-        <div class="card-body">
-          <h4 class="card-title">Know Your Disease</h4>
-          <h5 class="card-text"><b>Technology :</b> HTML5,CSS3,JS,MYSQL,PHP </h5>
-         <a href="https://github.com/mehulk05/Know-Your-Disease" class="btn btn-primary stretched-link ml-2 mr-5">See Project</a>
-          <a href="https://github.com/mehulk05/Know-Your-Disease" class="btn btn-primary stretched-link">GithubLink</a>
-        </div>
-      </div>
-    </div>
-    </div>
-    
-    <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
-        <div class="blog-entry">
-       <div class="card" >
-        <img class="card-img-top" src="assets/images/p9.png" alt="Card image" style="width:100%">
-        <div class="card-body">
-          <h4 class="card-title">Pizza Ordering System</h4>
-           <h5 class="card-text"><b>Technology :</b> Java,Servlet,JSP,JDBC </h5>
-       <a href="https://github.com/mehulk05/Pizza-Ordering-System" class="btn btn-primary stretched-link ml-2 mr-5">See Project</a>
-          <a href="https://github.com/mehulk05/Pizza-Ordering-System" class="btn btn-primary stretched-link">GithubLink</a>
-        </div>
-        </div>
-        </div>
-      </div>
-    
-      
-    
     
     </div>
     </div>
